RESOLVED FIXED118802
Fix TimeRanges::intersectWith
https://bugs.webkit.org/show_bug.cgi?id=118802
Summary Fix TimeRanges::intersectWith
Eric Carlson
Reported 2013-07-17 10:22:36 PDT
Attachments
Patch (17.71 KB, patch)
2013-07-17 11:35 PDT, Jer Noble
no flags
Patch for landing (17.15 KB, patch)
2013-12-17 16:36 PST, Jer Noble
jer.noble: commit-queue-
Patch for landing (17.58 KB, patch)
2013-12-17 16:54 PST, Jer Noble
no flags
Jer Noble
Comment 1 2013-07-17 10:46:50 PDT
That blink patch has a number of unrelated changes. Merging in a subset of that patch.
Jer Noble
Comment 2 2013-07-17 11:35:53 PDT
WebKit Commit Bot
Comment 3 2013-07-17 13:14:56 PDT
Comment on attachment 206903 [details] Patch Rejecting attachment 206903 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.appspot.com', '--bot-id=webkit-cq-02', 'validate-changelog', '--check-oops', '--non-interactive', 206903, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit /Volumes/Data/EWS/WebKit/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://webkit-queues.appspot.com/results/1098282
Jer Noble
Comment 4 2013-07-17 13:23:58 PDT
Forgot the "Reviewed by:" line in WebCore/ChangeLog; fixing and landing manually.
Jer Noble
Comment 5 2013-12-17 16:36:26 PST
Created attachment 219468 [details] Patch for landing
Jer Noble
Comment 6 2013-12-17 16:54:17 PST
Created attachment 219476 [details] Patch for landing
WebKit Commit Bot
Comment 7 2013-12-17 21:33:47 PST
Comment on attachment 219476 [details] Patch for landing Clearing flags on attachment: 219476 Committed r160749: <http://trac.webkit.org/changeset/160749>
Ahmad Saleem
Comment 8 2022-10-14 07:57:26 PDT
Landed - https://github.com/WebKit/WebKit/commit/629c30d5301c181483003ae31a5dd51afa41911c and didn't backed out. Marking this as "RESOLVED FIXED".
Radar WebKit Bug Importer
Comment 9 2022-10-14 07:58:18 PDT
Note You need to log in before you can comment on or make changes to this bug.